<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ARviewer</string>
    
	<string name="map_key">0Tp7WsIDiyqoDmSF9LMprvDzte-hj_A6r-qxbow</string>
    <string name="urlServer">rest.libregeosocial.org/social/</string>
	
	<!-- About dialog -->
	<string name="version_arviewer">1.0</string>
	<string name="revision_arviewer"></string>
	<string name="about_title">About</string>
	<string name="about_web">Go to website!</string>
	<string name="about_message">Copyright (C) GSyC/LibreSoft \n\nThis software is under GPL v3.0 license!\n\nAuthors: \n  The developers of LibreGeoSocial.\n  Collaboration with Andago-URJC Chair.\n\nE-mail: lgs-contact@libresoft.es \nWeb: http://www.libregeosocial.org/node/24 </string>
	
	<!-- Empty dialog -->
	<string name="empty_places">ARviewer Places</string>
	<string name="empty_tagging">ARviewer Tagging</string>
	<string name="empty_title">ARviewer v1.0</string>
	<string name="empty_message">This FLOSS application is a tool which provides an augmented reality BROWSER or LABELER interface to external apps. By default, a DEMO layer, containing nodes from LibreGeoSocial, 11870.com and Youtube, will be shown in a BROWSER mode.\n\nMaybe you are interested on trying our DEMO applications, ARviewer Places and ARviewer Tagging, to see the power of combining this tool with other applications.\n\nFor further information, please visit our website at:\n\n http://www.libregeosocial.org/node/24</string>
	
	<!-- Maps -->
	<string name="map_resource_updated">Resource updated</string>
	<string name="map_toggle_sat">Toggle satellite view</string>
	<string name="map_location_start">Tap over your location</string>
	<string name="map_tagging_charge_title">Instructions</string>
	<string name="map_tagging_charge_message">1. Tap the map over the target location.\n\n2. Press \"Done\" in the options menu.</string>
	
	<!-- Location preferences -->
	<string name="pref_location_title">Location</string>
	<string name="pref_location_summary">Configure the location preferences</string>
	<string name="pref_location_provider_title">Provider</string>
	<string name="pref_location_provider_summary">Choose the provider for your location</string>
	<string name="pref_location_tunits_title">Time units</string>
	<string name="pref_location_tunits_summary">Choose the time unit</string>
	<string name="pref_location_period_title">Time period</string>
	<string name="pref_location_period_summary">Choose the time period</string>
	<string name="pref_location_distance_title">Minimum distance</string>
	<string name="pref_location_distance_summary">Choose the minimum distance for location refreshing</string>
	
	<string name="location_provider_title">Provider problem</string>
	<string name="location_provider_message">The location provider that you have selected is not enabled</string>
	<string name="location_provider_enable">Enable</string>
	<string name="location_provider_change">Change</string>
	
	<!-- AR preferences -->
	<string name="pref_ar_altitude_title">Altitude properties</string>
	<string name="pref_ar_altitude_status_title">Altitude mode</string>
	<string name="pref_ar_altitude_status_summary">Select the altitude system mode</string>
	<string name="pref_ar_altitude_useDistFilter_title">Altitude threshold</string>
	<string name="pref_ar_altitude_useDistFilter_summary_on">Far objects will be shown at the horizon line</string>
	<string name="pref_ar_altitude_useDistFilter_summary_off">Threshold disabled</string>
	<string name="pref_ar_altitude_distFilter_title">Threshold</string>
	<string name="pref_ar_location_title">Location properties</string>
	<string name="pref_ar_tools_title">Tools</string>
	<string name="pref_ar_tools_rotatingCompass_title">Rotating compass</string>
	<string name="pref_ar_tools_rotatingCompass_summary_on">Compass rotation enabled</string>
	<string name="pref_ar_tools_rotatingCompass_summary_off">Compass rotation disabled</string>
	<string name="pref_ar_tools_searchSystem_title">Search system</string>
	<string name="pref_ar_tools_searchSystem_summary_on">Clicked node search system enabled</string>
	<string name="pref_ar_tools_searchSystem_summary_off">Clicked node search system disabled</string>
	<string name="pref_ar_tools_tips_title">Enable tips</string>
	<string name="pref_ar_tools_tips_summary_on">Tips enabled</string>
	<string name="pref_ar_tools_tips_summary_off">Tips disabled</string>
	<string name="pref_ar_tools_azimuth_control_title">Azimuth control</string>
	<string name="pref_ar_tools_elevation_control_title">Elevation control</string>
	<string name="pref_ar_tools_control_title">Select the controller you want to use</string>
	<string name="pref_ar_labels_title">Labels</string>
	<string name="pref_ar_labels_moveLabels_title">Dynamic summary</string>
	<string name="pref_ar_labels_moveLabels_summary_on">Dynamic summary box enabled</string>
	<string name="pref_ar_labels_moveLabels_summary_off">Dynamic summary box disabled</string>
	<string name="pref_ar_labels_centerLabels_title">Central labels</string>
	<string name="pref_ar_labels_centerLabels_summary_on">Automatic opening of the central node summary box enabled</string>
	<string name="pref_ar_labels_centerLabels_summary_off">Automatic opening of the central node summary box disabled</string>
	<string name="pref_ar_labels_imageIcon_title">Image icon</string>
	<string name="pref_ar_labels_imageIcon_summary_on">Set resource image as icon enabled</string>
	<string name="pref_ar_labels_imageIcon_summary_off">Set resource image as icon disabled</string>
	<string name="pref_ar_names_title">Object names</string>
	<string name="pref_ar_names_namesShowing_title">Show</string>
	<string name="pref_ar_names_namesShowing_summary">Objects name showing mode</string>
	<string name="pref_ar_debug_title">Debug</string>
	<string name="pref_ar_debug_showMeasures_title">Show sensors data</string>
	<string name="pref_ar_debug_showMeasures_summary_on">On-screen sensors measures info enabled</string>
	<string name="pref_ar_debug_showMeasures_summary_off">On-screen sensors measures info disabled</string>
	
	<!-- User's altitude preferences -->
	<string name="pref_user_altitude_summary">Configure the user\'s altitude preferences</string>
	<string name="pref_user_altitude_title">User\'s altitude preferences</string>
	<string name="pref_useGPS_title">Location service altitude</string>
	<string name="pref_useGPS_summary_on">Location service altitude enabled</string>
	<string name="pref_useGPS_summary_off">Location service altitude disabled</string>
	<string name="pref_userHeight_title">User\'s tall</string>
	<string name="pref_useFloor_title">Location floor info</string>
	<string name="pref_useFloor_summary_on">Location floor info enabled</string>
	<string name="pref_useFloor_summary_off">Location floor info disabled</string>
	<string name="pref_floor_title">Floor number</string>
	
	<!-- Location Ways -->
	<string name="lw_not_found">Address not found</string>
	<string name="lw_toggle_sat">Toggle satellite view</string>
	<string name="lw_update">Location updated</string>
	<string name="lw_fail">Location update failed</string>
	<string name="lw_empty_address">Empty address</string>
	<string name="lw_insert_address">Where are you?</string>
	
	<!-- Labeling -->
	<string name="label_attach_content">Attach content</string>
	<string name="label_create">Create</string>
	<string name="label_create_resource">Create resource</string>
	<string name="label_cancel">Tagging canceled</string>
	<string name="label_method_title">Tag resource</string>
	<string name="label_method_immediate">Use your location</string>
	<string name="label_method_fast">Fast</string>
	<string name="label_method_map">Map</string>
	<string name="label_method_accurate_title">Move yourself</string>
	<string name="label_method_accurate_side">Accurate side</string>
	<string name="label_method_accurate_line">Accurate line</string>
	
	<!-- Labeling tips -->
	<string name="label_tip_main">Press \"Menu/Tag resource\" and select a method to start tagging.</string>
	<string name="label_tip_finish">Done. Press \"Menu/Return\" or the back button to return the nodes.</string>
	<string name="label_tip_focus">Focus the target and press \"Ok\".</string>
	<string name="label_tip_fast">Select the target distance, focus it and press \"Ok\".</string>
	<string name="label_tip_accurate_buttons">Press Finish when you have finished (be sure you have stored at least 2 samples).</string>
	<string name="label_tip_accurate_buttons_side_gps">Move aside (the distance you consider) and press Skip.\n</string>
	<string name="label_tip_accurate_buttons_side_nogps">Move yourself 1 meter aside and press the corresponding arrow button.\n</string>
	<string name="label_tip_accurate_buttons_line_gps">Move forward/backward (the distance you consider) and press Skip.\n</string>
	<string name="label_tip_accurate_buttons_line_nogps">Move yourself 1 meter forward/backward and press the corresponding arrow button.\n</string>
	
	<!-- Menu entries -->
	<string name="menu_distance">Distance filter</string>
	<string name="menu_about">About</string>
	<string name="menu_settings">Settings</string>
	<string name="menu_location">My location</string>
	<string name="menu_location_bidi">BIDI location</string>
	<string name="menu_location_manual">Manual location</string>
	<string name="menu_location_service">Built-in location system</string>
	
	<!-- GUI messages -->
	<string name="ok">Ok</string>
	<string name="done">Done</string>
	<string name="finish">Finish</string>
	<string name="return_">Return</string>
	<string name="skip">Skip</string>
	<string name="cancel">Cancel</string>
	<string name="search">Search</string>
	<string name="no_layer">Showing default layer</string>
	<string name="remove">Remove</string>
	<string name="sure">Are you sure?</string>
	<string name="error">Error</string>
	<string name="error_too_much_nodes">Too many objects, showing the first 50 ones</string>
	<string name="error_environment">There was an error loading the AR environment elements</string>
	<string name="error_barcode">Please, install Barcode Scanner from Market</string>
	<string name="error_bidi">There was an error with BIDI location</string>
	<string name="error_no_nodes">There aren\'t nodes to show</string>
	<string name="loading">Loading...</string>
	
</resources>
